--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.2",
-    "next": "15.2.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "15.5.9",
+    "react": "19.1.2",
+    "react-dom": "19.1.2",
     "schema-dts": "^1.1.5"
   },
   "devDependencies": {
@@ -23,7 +23,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "15.4.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
